--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/python.jpg" alt="Liberty">
+	               	<img src="/images/portfolio/python.jpg" alt="Liberty">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
