--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/hr1.jpg" alt="Shutterbug">
+	               	<img src="images/portfolio/hr1.JPG" alt="Shutterbug">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -388,7 +388,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/hr2.jpg" alt="Clouds">
+	               	<img src="images/portfolio/hr2.JPG" alt="Clouds">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -404,7 +404,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/iitb.jpg" alt="Beetle">
+	               	<img src="images/portfolio/iitb.JPG" alt="Beetle">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
